Move secrets path to match consumers
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -2,7 +2,7 @@ group:
   - files:
     - source: .gitsecret/
       dest: .gitsecret/
-    - source: secrets/
+    - source: .balena/secrets/
       dest: .balena/secrets/
     repos: |
       product-os/jellyfish-plugin-typeform
