Add balena api secrets
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -6,3 +6,4 @@ group:
       dest: .balena/secrets/
     repos: |
       product-os/jellyfish-plugin-typeform
+      product-os/jellyfish-plugin-balena-api
