Add outreach secrets
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -7,3 +7,4 @@ group:
     repos: |
       product-os/jellyfish-plugin-typeform
       product-os/jellyfish-plugin-balena-api
+      product-os/jellyfish-plugin-outreach
