--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ node_modules
 .balena/secrets/integration_typeform_signature_key.txt
 .balena/secrets/integration_balena_api_private_key.txt
 .balena/secrets/integration_balena_api_public_key_production.txt
+.balena/secrets/integration-outreach-app-id.txt
+.balena/secrets/integration-outreach-app-secret.txt
+.balena/secrets/integration-outreach-signature-key.txt
