--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ node_modules
 .balena/secrets/integration_outreach_app_id.txt
 .balena/secrets/integration_outreach_app_secret.txt
 .balena/secrets/integration_outreach_signature_key.txt
+.balena/secrets/integration_flowdock_signature_key.txt
+.balena/secrets/integration_flowdock_token.txt
