Add plugin-flowdock as sync target
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -8,3 +8,4 @@ group:
       product-os/jellyfish-plugin-typeform
       product-os/jellyfish-plugin-balena-api
       product-os/jellyfish-plugin-outreach
+      product-os/jellyfish-plugin-flowdock
