--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -9,3 +9,4 @@ group:
       product-os/jellyfish-plugin-balena-api
       product-os/jellyfish-plugin-outreach
       product-os/jellyfish-plugin-flowdock
+      product-os/jellyfish-plugin-github
