--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ node_modules
 .balena/secrets/integration_outreach_signature_key.txt
 .balena/secrets/integration_flowdock_signature_key.txt
 .balena/secrets/integration_flowdock_token.txt
+.balena/secrets/integration_github_app_id.txt
+.balena/secrets/integration_github_private_key.txt
+.balena/secrets/integration_github_signature_key.txt
