--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ node_modules
 .balena/secrets/integration_github_app_id.txt
 .balena/secrets/integration_github_private_key.txt
 .balena/secrets/integration_github_signature_key.txt
+.balena/secrets/integration_github_token.txt
