Add Front and Intercom secrets
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ node_modules
 .balena/secrets/integration_github_private_key.txt
 .balena/secrets/integration_github_signature_key.txt
 .balena/secrets/integration_github_token.txt
+.balena/secrets/integration_front_token.txt
+.balena/secrets/integration_intercom_token.txt
