Add plugin-front as sync target
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -10,3 +10,4 @@ group:
       product-os/jellyfish-plugin-outreach
       product-os/jellyfish-plugin-flowdock
       product-os/jellyfish-plugin-github
+      product-os/jellyfish-plugin-front
