Add Discourse secrets
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -11,3 +11,4 @@ group:
       product-os/jellyfish-plugin-flowdock
       product-os/jellyfish-plugin-github
       product-os/jellyfish-plugin-front
+      product-os/jellyfish-plugin-discourse
