Add jellyfish-queue as sync target
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -12,3 +12,4 @@ group:
       product-os/jellyfish-plugin-github
       product-os/jellyfish-plugin-front
       product-os/jellyfish-plugin-discourse
+      product-os/jellyfish-queue
