Add other sync targets
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -13,3 +13,7 @@ group:
       product-os/jellyfish-plugin-front
       product-os/jellyfish-plugin-discourse
       product-os/jellyfish-queue
+      product-os/jellyfish-worker
+      product-os/jellyfish-core
+      product-os/jellyfish-action-library
+      product-os/jellyfish-plugin-default
