Add Google Meet credentials secret
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ node_modules
 .balena/secrets/integration_discourse_signature_key.txt
 .balena/secrets/integration_discourse_token.txt
 .balena/secrets/integration_discourse_username.txt
+.balena/secrets/integration_google_meet_credentials.txt
