Add product-os/jellyfish as sync target
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -17,3 +17,4 @@ group:
       product-os/jellyfish-core
       product-os/jellyfish-action-library
       product-os/jellyfish-plugin-default
+      product-os/jellyfish
