Add password reset token
Change-type: minor
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ node_modules
 .balena/secrets/integration_discourse_username.txt
 .balena/secrets/integration_google_meet_credentials.txt
 .balena/secrets/mailgun_token.txt
+.balena/secrets/reset_password_secret_token.txt
