--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ node_modules
 .balena/secrets/mailgun_token.txt
 .balena/secrets/reset_password_secret_token.txt
 .balena/secrets/integration_balena_api_public_key_staging.txt
+.balena/secrets/registry_token_auth_cert_key.txt
+.balena/secrets/registry_token_auth_cert_kid.txt
