--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,4 @@
 node_modules
 .gitsecret/keys/random_seed
+.balena/secrets/*
 !*.secret
-.balena/secrets/aws_access_key_id
-.balena/secrets/aws_s3_bucket_name
-.balena/secrets/aws_secret_access_key
-.balena/secrets/integration_discourse_token
-.balena/secrets/integration_discourse_username
-.balena/secrets/integration_front_token
-.balena/secrets/integration_github_app_id
-.balena/secrets/integration_github_private_key
-.balena/secrets/integration_github_token
-.balena/secrets/integration_intercom_token
